--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,9 @@
 include: https://raw.githubusercontent.com/hassio-addons/organization/master/gitlabci/addon.yml
 
 variables:
-  ADDON_GITHUB_REPO: "hassio-addons/addon-plex"
-  ADDON_SLUG: "plex"
-  ADDON_TARGET: "plex"
+  ADDON_GITHUB_REPO: "twerff/addon-plex"
+  ADDON_SLUG: "plex2"
+  ADDON_TARGET: "plex2"
 
   ADDON_AARCH64: "false"
   ADDON_ARMV7: "false"
